Updated to VRL 0.4.4 & new APTED on bintray/maven

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 # Created by .ignore support plugin (hsz.mobi)
 
-build
+/build
 CellTreeEditDistance.iml
-.idea
-.gradle
+/.idea
+/.gradle
 out/
+/.vscode
+/bin/
+/.settings
+/.project
+/.classpath
