--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.3.2.3')
+        classpath (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.4+')
     }
 }
 
@@ -19,8 +19,8 @@ if (!hasProperty('mainClass')) {
     ext.mainClass = 'edu.gcsc.celltreeedit.Main'
 }
 
-task wrapper(type: Wrapper, description: 'Creates and deploys the Gradle wrapper to the current directory.') {
-    gradleVersion = '4.3'
+wrapper {
+    gradleVersion = '5.4'
 }
 
 repositories {
@@ -30,11 +30,15 @@ repositories {
 dependencies {
     testCompile 'org.testfx:testfx-junit:4.0.4-alpha'
 
+    
+    compile 'eu.mihosoft.vvecmath:vvecmath:0.4.0'
+
     compile 'eu.mihosoft.vswc:vswc:0.0.1'
 
-    compile (group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.3.2.3')
+    compile group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.4+'
 
-    compile files("libs/apted-master.jar")
+    compile group: 'eu.mihosoft.ext.apted', name: 'apted', version: '0.1'
+    
 }
 
 
