CLI usable with LuceneQueries (exportToJson missing)

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     compile group: 'com.apporiented', name: 'hierarchical-clustering', version: '1.2.0'
+    compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.1.1'
+    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.1.1'
 
     
     compile 'eu.mihosoft.vvecmath:vvecmath:0.4.0'
