--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.1.1'
     compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.1.1'
     // https://mvnrepository.com/artifact/com.apporiented/hierarchical-clustering
-    compile group: 'com.apporiented', name: 'hierarchical-clustering', version: '1.2.0'
+//    compile group: 'com.apporiented', name: 'hierarchical-clustering', version: '1.2.0'
     // https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-stable
 //    compile group: 'nz.ac.waikato.cms.weka', name: 'weka-stable', version: '3.8.3'
 
@@ -53,6 +53,9 @@ dependencies {
     compile group: 'de.lmu.ifi.dbs.elki', name: 'elki-clustering', version: '0.7.5'
 // https://mvnrepository.com/artifact/de.lmu.ifi.dbs.elki/elki-database
     compile group: 'de.lmu.ifi.dbs.elki', name: 'elki-database', version: '0.7.5'
+    // https://mvnrepository.com/artifact/de.lmu.ifi.dbs.elki/elki-batik-visualization
+    compile group: 'de.lmu.ifi.dbs.elki', name: 'elki-batik-visualization', version: '0.7.5'
+
 
 
 
@@ -65,6 +68,9 @@ dependencies {
     compile group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.4+'
 
     compile group: 'eu.mihosoft.ext.apted', name: 'apted', version: '0.1'
+
+
+    implementation files('libs/hierarchical-clustering-1.2.1-SNAPSHOT.jar')
     
 }
 
