--- a/build.gradle
+++ b/build.gradle
@@ -36,23 +36,23 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.1.1'
-    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.1.1'
-    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.1.1'
+    // https://mvnrepository.com/artifact/org.apache.lucene/lucene-core
+    compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.2.0'
+    // https://mvnrepository.com/artifact/org.apache.lucene/lucene-analyzers-common
+    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.2.0'
+    // https://mvnrepository.com/artifact/org.apache.lucene/lucene-queryparser
+    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.2.0'
 
-
+//    compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.1.1'
+//    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.1.1'
+//    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.1.1'
 
     compile 'eu.mihosoft.vvecmath:vvecmath:0.4.0'
-
     compile 'eu.mihosoft.vswc:vswc:0.0.1'
-
     compile group: 'eu.mihosoft.vrl', name: 'vrl', version: '0.4.4+'
-
     compile group: 'eu.mihosoft.ext.apted', name: 'apted', version: '0.1'
 
-
     implementation files('libs/hierarchical-clustering-1.2.1-SNAPSHOT.jar')
-    
 }
 
 
@@ -85,6 +85,15 @@ jar {
     // project class files compiled from source
     from files(sourceSets.main.output.classesDirs)
     manifest.attributes "Main-Class": "edu.gcsc.celltreeedit.Main"
+}
+
+task customFatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'edu.gcsc.celltreeedit.Main'
+    }
+    baseName = 'all-in-one-jar'
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
 
 String getVRLDir() {
