--- a/build.gradle
+++ b/build.gradle
@@ -37,18 +37,10 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
     compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    // https://mvnrepository.com/artifact/org.apache.lucene/lucene-core
     compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.2.0'
-    // https://mvnrepository.com/artifact/org.apache.lucene/lucene-analyzers-common
     compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.2.0'
-    // https://mvnrepository.com/artifact/org.apache.lucene/lucene-queryparser
     compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.2.0'
-
-//    compile group: 'org.apache.lucene', name: 'lucene-core', version: '8.1.1'
-//    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.1.1'
-//    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.1.1'
 
     compile 'eu.mihosoft.vvecmath:vvecmath:0.4.0'
     compile 'eu.mihosoft.vswc:vswc:0.0.1'
@@ -75,27 +67,20 @@ def loadProperties(String sourceFileName) {
 // loads the property file
 loadProperties('build.properties')
 
-// create a fat-jar (class files plus dependencies
-// excludes VRL.jar (plugin jar files must not start with 'vrl-\\d+')
-jar {
-
-    // dependencies except VRL
-    from configurations.runtime.asFileTree.
-            filter({file->return !file.name.startsWith("vrl-0")}).
-            files.collect { zipTree(it) }
-
-    // project class files compiled from source
-    from files(sourceSets.main.output.classesDirs)
-    manifest.attributes "Main-Class": "edu.gcsc.celltreeedit.Main"
+// runs the program
+task run(type: JavaExec) {
+    classpath sourceSets.main.runtimeClasspath
+    main = "edu.gcsc.celltreeedit.Main"
+    standardInput = System.in
 }
 
-task customFatJar(type: Jar) {
+// creates a fat-jar
+jar {
     manifest {
         attributes 'Main-Class': 'edu.gcsc.celltreeedit.Main'
     }
-    baseName = 'all-in-one-jar'
-    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
+    from { configurations.runtimeClasspath.asFileTree.filter({file->return !file.name.startsWith("vrl-0")}).
+            files.collect { it.isDirectory() ? it : zipTree(it) } }
 }
 
 String getVRLDir() {
